--- a/style.css
+++ b/style.css
@@ -78,14 +78,72 @@ button {
 }
 
 .container2 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     font-size: 20px;
     padding: 30px 15%;
     background: white;
-    height: 270px;
+    height: 342px;
 }
+
+.subheading2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.texts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    margin-left: 275px;
+    margin-right: 275px;
+    text-align: center;
+    font-size: 18px;
+    color: #E5E7EB
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    align-items: center;
+}
+
+.box1 {
+  border-radius: 25px;
+  border: 2px solid #3882f6;
+  padding: 20px;
+  width: 100px;
+  height: 100px;
+}
+
+.box2 {
+    border-radius: 25px;
+    border: 2px solid #3882f6;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .box3 {
+    border-radius: 25px;
+    border: 2px solid #3882f6;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .box4 {
+    border-radius: 25px;
+    border: 2px solid #3882f6;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+  }
 
 .container3 {
     display: flex;
@@ -94,7 +152,7 @@ button {
     font-size: 20px;
     padding: 30px 15%;
     background: #E5E7EB;
-    height: 270px;
+    height: 342px;
 }
 
 .container4 {
@@ -104,7 +162,7 @@ button {
     font-size: 20px;
     padding: 30px 15%;
     background: white;
-    height: 270px;
+    height: 342px;
 }
 
 .footer {
@@ -114,5 +172,4 @@ button {
     font-size: 20px;
     padding: 30px 15%;
     background: #1F2937;
-    height: 72px;
 }
