--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -162,7 +167,7 @@ button {
     font-size: 20px;
     padding: 30px 15%;
     background: white;
-    height: 342px;
+    height: 270px;
 }
 
 .footer {
