--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
     display: flex;
     font-size: 20px;
     font-weight: bold;
-    padding: 30px 15%;
+    padding: 1em 15%;
 }
 
 .block1 {
     display: flex;
     align-items: center;
-    height: 72px;
+    height: 5em;
     background: #1F2937;
     color: white;
     justify-content: space-between;
@@ -38,7 +38,7 @@ ul.headerlinks {
     gap: 16px;
     list-style-type: none;
     margin-left: auto;
-    padding: 30px 15%;
+    padding: 1em 15%;
 }
 
 a {
@@ -51,9 +51,8 @@ a {
     align-items: center;
     justify-content: space-between;
     font-size: 20px;
-    padding: 30px 15%;
+    padding: 1em 15%;
     background: #1F2937;
-    height: 270px;
 }
 
 
@@ -65,13 +64,13 @@ a {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
-    margin-bottom: 3px;
+    margin-bottom: 1em;
 }
 
 .texthero {
     font-size: 18px;
     color: #E5E7EB;
-    margin-bottom: 3px;
+    margin-bottom: 1em;
 }
 
 button {
@@ -79,21 +78,21 @@ button {
     border: 1px solid #3882f6;
     color: #E5E7EB;
     border-radius: 8px;
-    padding: 8px 16px;
+    padding: 0.5em 1em;
 }
 
 .container2 {
     font-size: 20px;
     padding: 30px 15%;
     background: white;
-    height: 342px;
+    height: 5em 15%;
 }
 
 .subheading2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 2em;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
@@ -103,9 +102,9 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
-    margin-left: 275px;
-    margin-right: 275px;
+    padding-top: 0.6em;
+    margin-left: 17em;
+    margin-right: 17em;
     text-align: center;
     font-size: 18px;
     color: #E5E7EB
@@ -122,59 +121,93 @@ button {
   border-radius: 25px;
   border: 2px solid #3882f6;
   padding: 20px;
-  width: 100px;
-  height: 100px;
+  width: 6.25em;
+  height: 6.25em;
 }
 
 .box2 {
     border-radius: 25px;
     border: 2px solid #3882f6;
     padding: 20px;
-    width: 100px;
-    height: 100px;
+    width: 6.25em;
+    height: 6.25em;
   }
 
   .box3 {
     border-radius: 25px;
     border: 2px solid #3882f6;
     padding: 20px;
-    width: 100px;
-    height: 100px;
+    width: 6.25em;
+    height: 6.25em;
   }
 
   .box4 {
     border-radius: 25px;
     border: 2px solid #3882f6;
     padding: 20px;
-    width: 100px;
-    height: 100px;
+    width: 6.25em;
+    height: 6.25em;
   }
 
 .container3 {
+    font-size: 20px;
+    padding: 7em 15%;
+    background: #E5E7EB;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 200;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-    padding: 30px 15%;
-    background: #E5E7EB;
-    height: 342px;
+    justify-content: center;
+}
+
+.name {
+    font-weight: bold;
+    margin-left: auto;
+    padding: 1em 15%;
+    justify-content: end;
+    display: flex;
 }
 
 .container4 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-    padding: 30px 15%;
+    padding: 4em 15%;
     background: white;
-    height: 270px;
+}
+
+.bluebox {
+    background-color: #3882f6;
+    border-radius: 1em;
+    padding: 3em 15%;
+}
+
+.innerheader {
+    font-size: 2em;
+    color: #F9FAF8;
+    margin-bottom: 0.1em;
+}
+
+.text-in-box {
+    font-size: 1em;
+    color: white;
+}
+
+.button2 {
+    background: #3882f6;
+    border: 1px solid #F9FAF8;
+    color: #E5E7EB;
+    border-radius: 0.5em;
+    padding: 0.3em 2em;
+    width: 8em;
+    height: 2em;
+    margin-left: auto;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    text-align: center;
     font-size: 20px;
-    padding: 30px 15%;
+    padding: 1em 15%;
     background: #1F2937;
 }
